# graph-multi-agent-streaming

./: .fdignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  README.md  bunfig.toml  cspell.json  package.json  pyproject.toml  turbo.json
apps/agent/: Dockerfile  package.json  pyproject.toml  pyrightconfig.json
apps/agent/src/agent/: main.py
apps/server/: package.json  tsconfig.json
apps/server/src/: index.ts
apps/server/src/routes/: chat.ts
apps/spa/: index.html  package.json  vite.config.ts
apps/spa/src/: main.tsx
apps/spa/src/components/: Chat.tsx
apps/spa/src/routes/: __root.tsx
iac/: .gitignore  package.json  tsconfig.json
iac/lib/: config.ts  main-stack.ts
iac/lib/constructs/: agent-core-construct.ts  web-app-construct.ts
