[project]
name = "agent-core-playground"
version = "0.1.0"
description = "Agent Core Playground"
requires-python = ">=3.11"
dependencies = ["agent"]

[tool.uv.workspace]
members = ["apps/agent"]

[tool.uv.sources]
agent = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = ["ruff>=0.14.13"]
